# conferencia_edd_2s2024

./: README.md
blockchain-cuda/: .gitignore  CMakeLists.txt  main.cu
blockchain-cuda/elements/: Block.cu  Block.cuh  Blockchain.cu  Blockchain.cuh
blockchain-cuda/utils/: constants.hpp  sha256.cu  sha256.cuh
blockchain-single/: CMakeLists.txt  main.cpp
blockchain-single/elements/: Block.cpp  Block.hpp  Blockchain.cpp
blockchain-single/libs/: sha256.cpp  sha256.hpp
blockchain-threads/: main.cpp
blockchain-threads/elements/: Block.cpp  Blockchain.cpp  Blockchain.hpp
blockchain-threads/libs/: sha256.cpp  sha256.hpp
